ignore vendor folder
