# api/main.go
@@ -4,22 +4,69 @@ import (
 	"log"
 
 	"github.com/duybkit13/api/configurations"
+	"github.com/duybkit13/api/docs"
 	"github.com/duybkit13/api/routers"
 	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"     // swagger embed files
+	ginSwagger "github.com/swaggo/gin-swagger" // gin-swagger middleware
 )
 
+// @title Swagger Example API
+// @version 1.0
+// @description This is a sample server celler server.
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
+
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host localhost:8080
+// @BasePath /v1
+
+// @securityDefinitions.basic BasicAuth
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
+// @securitydefinitions.oauth2.application OAuth2Application
+// @tokenUrl https://example.com/oauth/token
+// @scope.write Grants write access
+// @scope.admin Grants read and write access to administrative information
+
+// @securitydefinitions.oauth2.implicit OAuth2Implicit
+// @authorizationUrl https://example.com/oauth/authorize
+// @scope.write Grants write access
+// @scope.admin Grants read and write access to administrative information
+
+// @securitydefinitions.oauth2.password OAuth2Password
+// @tokenUrl https://example.com/oauth/token
+// @scope.read Grants read access
+// @scope.write Grants write access
+// @scope.admin Grants read and write access to administrative information
+
+// @securitydefinitions.oauth2.accessCode OAuth2AccessCode
+// @tokenUrl https://example.com/oauth/token
+// @authorizationUrl https://example.com/oauth/authorize
+// @scope.admin Grants read and write access to administrative information
+
 func main() {
-	_, err := configurations.LoadConfig(".")
+	config, err := configurations.LoadConfig(".")
 	if err != nil {
 		log.Fatal("Load Config Fail")
 	}
 	r := gin.Default()
-	r.GET("/health-check", func(c *gin.Context) {
-		c.JSON(200, gin.H{
-			"message": "Alive",
-		})
-	})
-	api := r.Group("/api")
-	routers.InitResultRouter(api)
-	r.Run()
+	// programmatically set swagger info
+	docs.SwaggerInfo.Title = "Guardrails.io"
+	docs.SwaggerInfo.Description = "GuardRail API Documentation"
+	docs.SwaggerInfo.Version = "1.0"
+	docs.SwaggerInfo.Host = "api.guardrails.io"
+	docs.SwaggerInfo.BasePath = "/v1"
+	docs.SwaggerInfo.Schemes = []string{"http", "https"}
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	routers.InitResultRouter(r)
+	r.Run(config.ServerAddress)
 }
